package com.csg.springframework.beans.factory.config;

import com.csg.springframework.beans.factory.BeanFactory;

public interface AutoWireCapableBeanFactory extends BeanFactory {
}
